--- a/index.html
+++ b/index.html
@@ -40,7 +40,24 @@
         <article><h2>Series</h2></article>
             <div>
                 <img src="img\series.jpg">
-                
+                <p>
+                    El mundo de Star Wars no se limita a las películas. Cientos de novelas, cómics, 
+                    videojuegos y otros productos relacionados con la saga han aumentado el universo limitado 
+                    de las películas. A este mundo fuera de las películas se le llamó Universo Expandido. 
+                    Tras la trilogía original comenzó a crecer el número de mundos, historias, biografías y 
+                    relatos relacionados con Star Wars, hacia atrás y hacia adelante en la linea temporal. 
+                    George Lucas, tras casi 20 años de silencio, comenzó a trabajar personalmente en las 
+                    precuelas (episodios I, II, III) y completar así su saga. Debido a la gran cantidad de 
+                    bibliografía existente ya sobre la historia de Star Wars, Lucas tuvo que rescatar algunos 
+                    conceptos ya existentes en este universo expandido (como el nombre de la capital de la 
+                    Antigua República, Coruscant) para mantener la coherencia. Sin embargo, esto no siempre 
+                    ha sido posible, y material editado antes de las películas se convirtió en una piedra en 
+                    el camino de la coherencia de la historia de Lucas. Se han establecido por tanto, una 
+                    serie de prioridades (o fuentes, como si de un relato histórico se tratase) para 
+                    clasificar el material de Star Wars y su fiabilidad en la historia: es el Canon 
+                    (habitualmente clasificado como G,T,C,S o N). Así todo lo que aparezca en las películas 
+                    es Canon G (George Lucas Canon) o de máxima fiabilidad
+                </p>
             </div>
         <a id="movies"></a>
         <article> <h2>Peliculas</h2></article>
@@ -91,6 +108,8 @@
                       parón de casi 20 años entre "El Regreso del Jedi" y "La Amenaza Fantasma".
             </p>
             <br>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/IqZ48OcUHD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            <br>
             <p>
                 Cuando Ronald Reagan presentó su Iniciativa de Defensa Estratégica (que incluía el 
                 lanzamiento de satélites capaces de destruir misiles en pleno vuelo), la prensa la apodó 
@@ -98,7 +117,7 @@
                 a realizarse, aunque actualmente se ha planteado un proyecto de escudo antimisiles, que es 
                 similar pero menos ambicioso
             </p>
-
+        <!--https://www.youtube.com/embed/IqZ48OcUHD8-->
         <!--https://www.youtube.com/embed/RvvGEkSdh8U-->    
     </section>
     <footer>
